force-app/main/default/objects/tdc_cti__Caller_List__c/fields/tdc_cti__Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>