force-app/main/default/objects/tdc_cti__Caller_List__c/fields/tdc_cti__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Caller_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>