force-app/main/default/objects/tdc_cti__Caller_List__c/fields/tdc_cti__Call_Highlighter__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Highlighter__c</fullName>
    <description>It is used to store the Id where the dialer list was paused</description>
    <label>Call Highlighter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>