force-app/main/default/objects/tdc_cti__Caller_List__c/fields/tdc_cti__Dialer_entries__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Dialer_entries__c</fullName>
    <label>Dialer entries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>