force-app/main/default/objects/tdc_cti__Caller_List__c/fields/tdc_cti__Phone__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Phone__c</fullName>
    <label>Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>