force-app/main/default/objects/tdc_cti__Caller_List__c/fields/tdc_cti__Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>