force-app/main/default/objects/tdc_cti__Caller_List__c/listViews/tdc_cti__All.listView-meta.xml
<ListView>
    <fullName>tdc_cti__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>